--- a/site/index.html
+++ b/site/index.html
@@ -123,7 +123,7 @@
   <h2>Qui sommes-nous ?</h2>
   <div class="about-block">
     <div class="about-image">
-      <img src="MMimage.jpg" alt="Photo professionnelle de l'équipe" style="max-width: 300px; border-radius: 10px;">
+      <img src="MMimage.JPG" alt="Photo professionnelle de l'équipe" style="max-width: 300px; border-radius: 10px;">
     </div>
     <div class="about-text">
       <p>Master Your Metrics est une solution développée par des professionnels de la finance, de la conformité et du digital pour répondre aux besoins des indépendants, PME et experts du chiffre.</p>
