--- a/site/diagnostics/esg.html
+++ b/site/diagnostics/esg.html
@@ -140,7 +140,7 @@
 
     
   </main>
-
+<a href="../index.html" style="display:inline-block; margin-top:30px; padding:12px 24px; background-color:#0074D9; color:white; text-decoration:none; border-radius:6px; font-weight:bold;">← Retour à l'accueil</a>
   <footer>
     © 2025 Master Your Metrics. Tous droits réservés.
   </footer>
