--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -143,6 +143,7 @@
 
   <div id="result"></div>
 </main>
+<a href="../index.html" style="display:inline-block; margin-top:30px; padding:12px 24px; background-color:#0074D9; color:white; text-decoration:none; border-radius:6px; font-weight:bold;">← Retour à l'accueil</a>
 
 <script>
   document.getElementById('cyberForm').addEventListener('submit', function(e) {
