--- a/site/synthese.html
+++ b/site/synthese.html
@@ -158,14 +158,64 @@
     </div>
   </section>
 
-  <section id="contact-form">
-    <h3>📤 Recevoir votre rapport personnalisé</h3>
-    <p>Entrez votre adresse e-mail pour recevoir votre synthèse complète et vos recommandations dans votre boîte mail :</p>
-    <form onsubmit="sendMail(event)">
-      <input type="email" id="email" placeholder="Votre adresse e-mail" required />
-      <button type="submit">Envoyer mon rapport</button>
-    </form>
-  </section>
+<section id="contact-form" style="max-width: 600px; margin: 40px auto; background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+  <h3>📤 Partagez vos résultats avec notre équipe</h3>
+  <p>Souhaitez-vous un retour personnalisé sur vos scores ? Cliquez ci-dessous pour envoyer votre synthèse à notre expert.</p>
+  <button onclick="sendReport()" style="width: 100%; padding: 15px; font-size: 1em; background-color: #0074D9; color: white; border: none; border-radius: 5px;">📨 Envoyer mon scorecard</button>
+</section>
+
+<script>
+  function sendReport() {
+    const scores = {
+      ESG: parseInt(localStorage.getItem('scoreESG')) || 0,
+      AML: parseInt(localStorage.getItem('scoreAML')) || 0,
+      Digital: parseInt(localStorage.getItem('scoreDigital')) || 0,
+      Credit: parseInt(localStorage.getItem('scoreCredit')) || 0,
+      Cyber: parseInt(localStorage.getItem('scoreCyber')) || 0
+    };
+
+    const total = scores.ESG + scores.AML + scores.Digital + scores.Credit + scores.Cyber;
+    const max = 100;
+    const ratio = total / max;
+    let interpretation = "";
+
+    if (ratio < 0.4) {
+      interpretation = "🔴 Vos fondations sont à renforcer. Ce diagnostic met en lumière des risques importants à corriger rapidement.";
+    } else if (ratio < 0.7) {
+      interpretation = "🟠 Votre structure est en développement. Des opportunités concrètes d'amélioration sont à portée de main.";
+    } else {
+      interpretation = "🟢 Vous êtes bien positionné ! Il ne vous manque qu'une mise en œuvre ciblée pour consolider votre avantage.";
+    }
+
+    const body = `
+Bonjour,
+
+Un utilisateur vient de compléter son diagnostic Master Your Metrics. Voici les résultats :
+
+🌱 ESG : ${scores.ESG}/20  
+💼 AML : ${scores.AML}/20  
+💻 Digitalisation : ${scores.Digital}/20  
+📊 Crédit : ${scores.Credit}/20  
+🔐 Cybersécurité : ${scores.Cyber}/20  
+⭐ Score global : ${total}/100
+
+📈 Interprétation :
+${interpretation}
+
+🎯 Recommandation :
+Nous vous invitons à prendre contact avec notre équipe pour traduire ce diagnostic en plan d'action opérationnel. Ensemble, transformons ces insights en résultats concrets.
+
+📬 Contact : cobsstrategy@gmail.com
+
+— L'équipe Master Your Metrics
+    `.trim();
+
+    const subject = encodeURIComponent("🧭 Ma Scorecard – Master Your Metrics");
+    const mailto = `mailto:cobsstrategy@gmail.com?subject=${subject}&body=${encodeURIComponent(body)}`;
+    window.location.href = mailto;
+  }
+</script>
+
 
   <div class="cta-section">
     <h2>Prêt à agir ?</h2>
