--- a/site/synthese.html
+++ b/site/synthese.html
@@ -161,7 +161,7 @@
 <section id="contact-form" style="max-width: 600px; margin: 40px auto; background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
   <h3>📤 Partagez vos résultats avec notre équipe</h3>
   <p>Souhaitez-vous un retour personnalisé sur vos scores ? Cliquez ci-dessous pour envoyer votre synthèse à notre expert.</p>
-  <button onclick="sendReport()" style="width: 100%; padding: 15px; font-size: 1em; background-color: #0074D9; color: white; border: none; border-radius: 5px;">📨 Envoyer mon scorecard</button>
+  <button onclick="sendReport()" style="width: 100%; padding: 15px; font-size: 1em; background-color: #0074D9; color: white; border: none; border-radius: 5px;">📨 Envoyer ma scorecard</button>
 </section>
 
 <script>
