--- a/site/index.html
+++ b/site/index.html
@@ -114,7 +114,7 @@
 <body>
 
 <header>
-  <h1>Des diagnostics actionnables pour les PME, fiduciaires et professionnels</h1>
+  <h1>Transformez vos contraintes en opportunités. </h1>
   <p>ESG · AML/KYC · Digitalisation · Crédit · Cybersécurité</p>
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 </header>
