--- a/site/index.html
+++ b/site/index.html
@@ -115,7 +115,9 @@
 
 <header>
   <h1>Transformez vos contraintes en opportunités. </h1>
-  <p>ESG · AML/KYC · Digitalisation · Crédit · Cybersécurité</p>
+  <p style="font-size: 1.2em; max-width: 800px; margin: auto;">
+    Nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à mieux piloter votre activité, à répondre aux attentes des clients et à anticiper les évolutions réglementaires.
+  </p>
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 </header>
 
