--- a/site/index.html
+++ b/site/index.html
@@ -137,11 +137,21 @@
 <section id="modules">
   <h2>Nos 5 Modules Clés</h2>
   <div class="features">
-    <div class="feature"><strong>🌱 ESG</strong><br/>Évaluez vos engagements durables</div>
-    <div class="feature"><strong>🔒 AML/KYC</strong><br/>Renforcez votre conformité réglementaire</div>
-    <div class="feature"><strong>💻 Digitalisation</strong><br/>Identifiez vos leviers numériques</div>
-    <div class="feature"><strong>📊 Crédit</strong><br/>Optimisez vos ratios financiers</div>
-    <div class="feature"><strong>🛡️ Cybersécurité</strong><br/>Mesurez vos protections techniques</div>
+     <a href="diagnostics/esg.html" class="feature" style="text-decoration: none; color: inherit;">
+      <strong>🌱 ESG</strong><br/>Évaluez vos engagements durables
+    </a>
+    <a href="diagnostics/aml.html" class="feature" style="text-decoration: none; color: inherit;">
+      <strong>🔒 AML/KYC</strong><br/>Renforcez votre conformité réglementaire
+    </a>
+    <a href="diagnostics/digital.html" class="feature" style="text-decoration: none; color: inherit;">
+      <strong>💻 Digitalisation</strong><br/>Identifiez vos leviers numériques
+    </a>
+    <a href="diagnostics/credit.html" class="feature" style="text-decoration: none; color: inherit;">
+      <strong>📊 Crédit</strong><br/>Optimisez vos ratios financiers
+    </a>
+    <a href="diagnostics/cyber.html" class="feature" style="text-decoration: none; color: inherit;">
+      <strong>🛡️ Cybersécurité</strong><br/>Mesurez vos protections techniques
+    </a>
   </div>
 </section>
 
