Fix HTML encoding issues in synthese.html
change mail to masteryourmetrics@gmail.com

--- a/site/synthese.html
+++ b/site/synthese.html
@@ -205,13 +205,13 @@ ${interpretation}
 🎯 Recommandation :
 Nous vous invitons à prendre contact avec notre équipe pour traduire ce diagnostic en plan d'action opérationnel. Ensemble, transformons ces insights en résultats concrets.
 
-📬 Contact : cobsstrategy@gmail.com
+📬 Contact : masteryourmetrics@gmail.com
 
 — L'équipe Master Your Metrics
     `.trim();
 
     const subject = encodeURIComponent("🧭 Ma Scorecard – Master Your Metrics");
-    const mailto = `mailto:cobsstrategy@gmail.com?subject=${subject}&body=${encodeURIComponent(body)}`;
+    const mailto = `mailto:masteryourmetrics@gmail.com?subject=${subject}&body=${encodeURIComponent(body)}`;
     window.location.href = mailto;
   }
 </script>
@@ -220,7 +220,7 @@ Nous vous invitons à prendre contact avec notre équipe pour traduire ce diagno
   <div class="cta-section">
     <h2>Prêt à agir ?</h2>
     <p>Nous vous aidons à transformer ce diagnostic en plan d'action. Prenez contact avec notre équipe pour un échange confidentiel et personnalisé.</p>
-    <a href="mailto:contact@masteryourmetrics.com" class="cta-button">📩 Planifier un appel</a>
+    <a href="mailto:masteryourmetrics@gmail.com" class="cta-button">📩 Planifier un appel</a>
   </div>
 
   <div class="temoignage">
@@ -279,3 +279,4 @@ Résultats de l'utilisateur :
 
 </body>
 </html>
+
