--- a/site/index.html
+++ b/site/index.html
@@ -183,7 +183,7 @@
 <section id="contact">
   <h2>📬 Contactez-nous</h2>
   <p>Prêt à mesurer et améliorer vos indicateurs clés ?</p>
-  <a href="mailto:contact@masteryourmetrics.com" class="cta-button">📩 Prendre contact</a>
+  <a href="mailto:masteryourmetrics@gmail.com" class="cta-button">📩 Prendre contact</a>
 </section>
 
 <footer>
